--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,8 @@
 /config/master.key
 Gemfile.lock
 yarn.lock
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
